区分独立大厅
